--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
   </header>
 
-  <main class="page-content">
+  <main class="page-content" id="page-content">
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
       <ul class="task-list" id="tasks-to-do"></ul>
@@ -55,7 +55,7 @@
     &copy;2020 by Taskinator
   </footer>
 
-  <script src="./assets/js/script.js"></script>
+  <script src = "assets/js/script.js "></script>
 </body>
 
 </html>
