--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    &copy;2020 by Taskinator
+    &copy;2020 by Sarah Wyner
   </footer>
 
   <script src = "assets/js/script.js "></script>
